--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.89.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "geist": "^1.7.0",
     "lenis": "^1.1.14",
     "lucide-react": "^0.540.0",
     "next": "15.4.10",
